--- a/CS112_Decision/social_network/data_socialnetwork.Rmd
+++ b/CS112_Decision/social_network/data_socialnetwork.Rmd
@@ -1,6 +1,7 @@
 ---
 title: "R Notebook"
-output: html_notebook
+output: rmarkdown::github_document
+
 ---
 
 ```{r}
@@ -406,4 +407,3 @@ mbgen3 <- MatchBalance(network_yes~ male + age + agpop + ricearea_2010 + literac
 ```{r}
 summary(mout3)
 ```
-
